static/styles.css
svg, use { pointer-events: none; }
ul { list-style-type: none; padding-left: 0; }
ul li { list-style-type: none; }

.align-center { align-items: center; }
.centered-card { margin: 0 auto; }
.flex { display: flex; gap: var(--pico-spacing); }
.flex-inline { display: inline-flex; gap: var(--pico-spacing); }
.flex-grow { flex: 1; }
.float-left { float: left; }
.gap-xs { gap: calc(var(--pico-spacing) / 1.6); }
.hide { display: none; }
.horizontal-scroll { display: flex; flex-wrap: nowrap; gap: calc(var(--pico-spacing) / 3); }
.horizontal-scroll button { white-space: nowrap; flex: 0 0 auto; }
.max-width-xs { max-width: 576px; }
.mb-xs { margin-bottom: calc(var(--pico-spacing) / 3); }
.ml-xs { margin-left: calc(var(--pico-spacing) / 3); }
.muted-color { color: var(--pico-muted-color); }
.overflow-auto {
	-webkit-overflow-scrolling: touch;
	&::-webkit-scrollbar { display: none; }
	scrollbar-width: none;
	-ms-overflow-style: none;
}
.position-relative { position: relative; }
.primary { color: var(--pico-primary); }
.show-hover-parent .show-hover { display:none; }
.show-hover-parent:hover .show-hover { display: unset; }
.space-between { justify-content: space-between; }
.strike { text-decoration: line-through; }
.text-center { text-align: center; }
.pointer { cursor: pointer; }

#task-list input[type='checkbox'] { margin-top: 0; }
#autocomplete {
	background: var(--pico-form-element-background-color);
	border: 1px solid var(--pico-form-element-border-color);
	border-radius: var(--pico-border-radius);
	left: 0;
	list-style-type: none;
	max-height: 200px;
	overflow-y: auto;
	position: absolute;
	right: 0;
	top: calc(100% - var(--pico-spacing));
	z-index: 10;
}
#autocomplete li {
	cursor: pointer;
	padding: var(--pico-form-element-spacing-vertical) var(--pico-form-element-spacing-horizontal);
}
#autocomplete li.selected { background: var(--pico-dropdown-hover-background-color); }

@media only screen and (max-width: 1024px) {
	.flex-column-lg { flex-direction: column; }
}

